fixed a couple of alignment issues in necc's theme

--- a/Generic/hill/frontend/structure.sass
+++ b/Generic/hill/frontend/structure.sass
@@ -9,7 +9,7 @@ div#header
   position: relative
 
   div.wrapper
-    height: 165px
+    height: 152px
     margin: auto
     position: relative
     width: 1000px
@@ -35,8 +35,8 @@ div#header
     width: 100%
 
     div.wrapper
-      height: 27px
-      padding: 6px
+      height: 20px
+      padding-top: 6px
 
     span
       color: #888
@@ -51,7 +51,7 @@ div#header
     width: 305px
 
   div#menu
-    bottom: 50px
+    bottom: 40px
     position: absolute
     right: 0
 
@@ -108,7 +108,7 @@ div#content.double
 div#main
   background-color: #FFF
   min-height: 300px
-  margin: 20px auto 40px
+  margin: 20px auto 0
   width: 1000px
 
 
@@ -160,7 +160,7 @@ div#announcements
   border: 1px solid #024873
   height: 250px
   position: relative
-  margin: 20px 0
+  margin: 20px 0 0
   width: 1000px
 
   a
