--- a/Generic/hill/frontend/typography.sass
+++ b/Generic/hill/frontend/typography.sass
@@ -66,6 +66,7 @@ div#tag-menu
 
   h2
     color: $default-color
+    font-size: 18px
 
   a:hover
     border-bottom: 2px solid $default-color
